--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,9 @@
 body {
     font-family: 'Play', sans-serif;
-    background-image: url(../images/worldcup.jpg);
+    background-image: url(../images/soccer2.jpg);
+    background-size: cover;
     background-repeat: repeat;
+    background-position: 50% 50%;
     color: royalblue;
     text-align: center;
 }
